--- a/docker/README.org
+++ b/docker/README.org
@@ -1,7 +1,6 @@
 * NOTES
 
 ** PUSH
-
 NOTE: Now in order to push the image just make sure the path which you are using must have your
 username included in the tag, [[https://hub.docker.com/u/ebloc][docker-hub]].
 
@@ -13,30 +12,22 @@ docker push ebloc/ebloc-broker
 #+end_src
 
 ** Size
-
 #+begin_src bash
 docker history --human --format "{{.CreatedBy}}: {{.Size}}" ebb
 docker images ebb:latest --format "{{.Repository}}:{{.Tag}} -> {{.Size}}"
 #+end_src
 
 ** Remove cache
-
-- to delete all containers including its volumes use: ~docker rm -vf $(docker ps -aq)~
-- to delete all the images: ~docker rmi -f $(docker images -aq)~
-
 #+begin_src bash
-#: remove_dangling
+docker rm -vf $(docker ps -aq)  # to delete all containers including its volumes use
+docker rmi -f $(docker images -aq)  # to delete all the images:
+
+# remove_dangling
 docker images -qa -f 'dangling=true' | ifne docker rmi $(docker images -qa -f 'dangling=true') --force
 docker image ls
-
-# sudo systemctl start docker
-# sudo docker run eblocbroker
-# doocker run --name test -it eblocbroker bash
-docker run --hostname slurmctl -it ebb bash  # build and bash into
 #+end_src
 
-** Clean complete docker cache
-
+*** Clean complete docker cache
 #+begin_src bash
 docker kill $(docker ps -q)
 docker rmi $(docker images -a --filter=dangling=true -q) --force
@@ -45,6 +36,12 @@ docker rmi $(docker images -a -q) --force
 #+end_src
 
 ** Build
+#+begin_src bash
+# sudo systemctl start docker
+# sudo docker run eblocbroker
+# doocker run --name test -it eblocbroker bash
+docker run --hostname slurmctl -it ebb bash
+#+end_src
 
 #+begin_src bash
 docker build -t ebb:latest --progress plain .
