Add minor improvements

--- a/broker/todo.org
+++ b/broker/todo.org
@@ -46,3 +46,8 @@ Response: {
   "error": "invalid_grant",
   "error_description": "Token has been expired or revoked."
 }
+
+
+
+
+** TODO verify_data_list= returns empty
