Add minor improvements

--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 =eBlocBroker= is a smart contract as an autonomous volunteer computing and sharing data resource broker based on blockchain for e-Science.
 It applies blockchain technology to provide a market for computational and data resources to research communities.
 
-For more info see: [[http://ebloc-broker-readthedocs.duckdns.org:8000/index.html][documentation]]
+For more info see: [[http://ebloc-broker-readthedocs.duckdns.org:8000/index.html][documentation]].
 
 # ** Website: [[http://ebloc.cmpe.boun.edu.tr]] # http://ebloc.org
 
