--- a/README.org
+++ b/README.org
@@ -65,7 +65,7 @@ Next, type ~eblocbroker --help~ for basic usage information.
 In order to submit your job each user should already registered into eBlocBroker using ~eblocbroker register_provider ~/.ebloc-broker/cfg.yaml~
 # You can use [[./broker/eblocbroker_scripts/register_requester.py]] to register.
 # Please update following arguments inside ~register.yaml~.
-After registration is done, each user should authenticate their ORCID iD using the following [[http://eblocbroker.duckdns.org/]].
+After registration is done, each user should authenticate their ORCID iD using the following [[http://ebloc-broker-authenticate.duckdns.org/index.php]] using [[https://brave.com][Brave]] browser along with [[https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn][MetaMask]].
 
 #+begin_src bash
 $ eblocbroker submit job.yaml
