Add minor improvements

--- a/broker/TODO.org
+++ b/broker/TODO.org
@@ -46,5 +46,4 @@ Response: {
   "error": "invalid_grant",
   "error_description": "Token has been expired or revoked."
 }
-
-** TODO apply reverse proxy for the docs at kama
+** TODO Kayitli olsan gdrive ile == "gdrive about' is match? check
