Add minor improvements

--- a/broker/TODO.org
+++ b/broker/TODO.org
@@ -47,3 +47,4 @@ Response: {
   "error_description": "Token has been expired or revoked."
 }
 ** TODO Kayitli olsan gdrive ile == "gdrive about' is match? check
+** TODO Fetch ipfs repo dir from the cfg.yaml for each instance
