Fix check of regisered gmail == "gdrive about' is match?

--- a/broker/TODO.org
+++ b/broker/TODO.org
@@ -46,5 +46,9 @@ Response: {
   "error": "invalid_grant",
   "error_description": "Token has been expired or revoked."
 }
-** TODO Kayitli olsan gdrive ile == "gdrive about' is match? check
 ** TODO Fetch ipfs repo dir from the cfg.yaml for each instance
+
+** TODO =warning: timeout function took too long events since bn=20990633 -- counter=0:00:54 ...   Awaiting transaction in the mempool... \=
+
+timeout error during job submissions: start submitting jobs than stop docker instance and make it
+work in that condition.
