--- a/.docs/gdrive.org
+++ b/.docs/gdrive.org
@@ -1,8 +1,8 @@
-# Installing Gdrive
+* Installing Gdrive
 
 In order to use Google API, you will need to:
 
-```markdown
+#+begin_src markdown
 1. Go to https://console.developers.google.com/ and create a new project for yourself
 2. Search for the **Google Drive API** in the search box at the top, and click manage this app
 3. Click `OAuth` consent screen on the left and set it up.
@@ -13,31 +13,31 @@ of gdrive, so everyone will have to compile their own (unless someone
 goes and gets theirs reviewed by Google)
 4. Click Credentials on the left, then Create Credentials, then OAuth client ID. The application type is Desktop app
 5. Copy the Client ID and Secret into handlers_drive.go lines 17 and 18 and compile the application
-```
+#+end_src
 
-Link: [How to handle “App is temporarily blocked from logging in with your Google account” barrier](https://stackoverflow.com/a/65507155/2402577)
+Link: [[https://stackoverflow.com/a/65507155/2402577][How to handle “App is temporarily blocked from logging in with your Google account” barrier]]
 
-------------
+---------
 
-```bash
+#+begin_src bash
 mkdir -p ~/git
 cd ~/git
 git clone https://github.com/prasmussen/gdrive.git && cd gdrive
-```
+#+end_src
 
-Copy the `Client ID` and `Secret` into `handlers_drive.go` lines 17 and 18 and compile the application.
+Copy the ~Client ID~ and ~Secret~ into ~handlers_drive.go~ lines 17 and 18 and compile the application.
 
-**Note:** Generated token expires in 7 days.
+*Note:* Generated token expires in 7 days.
 
 Finally:
- * https://console.cloud.google.com/apis/credentials/consent
-`PUBLISH APP`
+- https://console.cloud.google.com/apis/credentials/consent
+  ~PUBLISH APP~
 
-## Build
+** Build
 
-Open terminal and go to the folder where the `handerls_drive.go` is.
+Open terminal and go to the folder where the ~handerls_drive.go~ is.
 
-```bash
+#+begin_src bash
 cd ~/git/gdrive
 rm -f ~/.gdrive/token_v2.json  # delete the old token
 go env -w GO111MODULE=auto
@@ -45,16 +45,16 @@ go get github.com/prasmussen/gdrive  # go install github.com/prasmussen/gdrive@l
 go build -ldflags "-w -s"
 sudo cp gdrive /usr/local/bin/gdrive
 ./gdrive about
-```
+#+end_src
 
 Go to the following URL in your browser:
 https://accounts.google.com/o/oauth2/auth?access_type=...
 
-And paste it into your console next to: `Enter verification code:`
+And paste it into your console next to: ~Enter verification code:~
 
-## Guide
- * [https://console.cloud.google.com/apis/credentials](https://console.cloud.google.com/apis/credentials)
- * [TUTORIAL: How to get rid of 403 Errors](https://github.com/prasmussen/gdrive/issues/426)
- * [https://github.com/prasmussen/gdrive/issues/426#issuecomment-459150627](https://github.com/prasmussen/gdrive/issues/426#issuecomment-459150627)
- * [https://github.com/marufshidiq/gdrive-cli-builder](https://github.com/marufshidiq/gdrive-cli-builder)
- * [https://github.com/prasmussen/gdrive/commit/31d0829c180795d17e00b7a354fffe4d72be712b#commitcomment-45165924](https://github.com/prasmussen/gdrive/commit/31d0829c180795d17e00b7a354fffe4d72be712b#commitcomment-45165924)
+** Guide
+- [[https://console.cloud.google.com/apis/credentials]]
+- [[https://github.com/prasmussen/gdrive/issues/426][TUTORIAL: How to get rid of 403 Errors]]
+- [[https://github.com/prasmussen/gdrive/issues/426#issuecomment-459150627]]
+- [[https://github.com/marufshidiq/gdrive-cli-builder]]
+- [[https://github.com/prasmussen/gdrive/commit/31d0829c180795d17e00b7a354fffe4d72be712b#commitcomment-45165924]]
