Improve quickstart docs

--- a/README.org
+++ b/README.org
@@ -22,7 +22,8 @@ For more info see: [[https://ebloc-broker-readthedocs.duckdns.org/][documentatio
 
 You can use a sandbox container provided in the [[./docker-compose.yml]] file for testing inside a Docker environment.
 
-This container provides everything you need to test using a ~Python 3.7~ interpreter. Start the test environment:
+This container provides everything you need to test using a ~Python 3.7~ interpreter.
+Start the test environment:
 #+begin_src bash
 docker-compose up -d
 #+end_src
@@ -48,7 +49,7 @@ First, from [[https://b2access.eudat.eu/home/][B2ACCESS home page]]
 - [[https://b2drop.eudat.eu/][B2DROP login site]]
 
 **** Create app password
-=Settings= => ~Security~ => ~Create new app password~ and save it.
+=Settings= => ~Security~ => ~Create new app password~ and save it onto ~~/.ebloc-broker/.b2drop_client.txt~ file.
 
 ** How to install required packages
 
