--- a/broker/flask/README.org
+++ b/broker/flask/README.org
@@ -14,3 +14,13 @@ hypercorn app_ebb:app -b 127.0.0.1:8000 --reload
 curl -v 127.0.0.1:8000
 curl -X POST http://127.0.0.1:8000/webhook -d "0x29e613b04125c16db3f3613563bfdd0ba24cb629 0000-0001-7642-0552"
 #+end_src
+
+---------------------------------------------
+
+#+begin_src bash
+export FLASK_APP=hello
+export FLASK_ENV=development
+flask run --host=0.0.0.0
+
+curl http://192.168.1.117:5000/
+#+end_src
